--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <title>Plantae</title>
     <style>
         main {
-            margin-top: 80px;
+            padding-top: 30px;
         }
     </style>
 </head>
