Feat: Criando componente do carrinho

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <title>Plantae</title>
+    <style>
+        main {
+            padding-top: 30px;
+        }
+    </style>
 </head>
 
 <body>
